gac_sb/objects/Perimetre__c.object
<CustomObject>
    <description>Objet reliant les établissements secondaires aux opportunités</description>
    <fields>
        <fullName>Compte__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Compte</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Périmètres d&apos;action</relationshipLabel>
        <relationshipName>P_rim_tres_d_action</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Etablissement__c</fullName>
        <inlineHelpText>Nom de l&apos;établissement à inclure dans le périmètre</inlineHelpText>
        <label>Etablissement secondaire</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Etablissement_secondaire__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Compte__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Etablissement_secondaire__c</referenceTo>
        <relationshipLabel>Opportunités Associées</relationshipLabel>
        <relationshipName>P_rim_tres_d_action</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Opportunite__c</fullName>
        <inlineHelpText>Nom de l&apos;opportunité comprise dans le périmètre</inlineHelpText>
        <label>Opportunité</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Établissements concernés</relationshipLabel>
        <relationshipName>P_rim_tres_d_action</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Périmètre d&apos;action</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Périmètres d&apos;action</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>